--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -190,6 +190,19 @@ b {
     }
 }
 
+.body_container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.body_sub_container {
+  height: 100vh;
+  width: 100vw;
+  max-width: 600px;
+  text-align: center;
+  margin-top: 100px;
+}
+
 .App {
 //   background: #f4f4f4;
 
